--- a/main.css
+++ b/main.css
@@ -10,65 +10,55 @@
     Google Font aldrich Regular
     Google Font open Sans Semibold and Regular
   border: 1px solid blue;   
-***********************************************/
+
 /**********************************************
                    TYPOGRAPHY 
 ***********************************************/
 
 body {
+    
     background-color: #fff;
 	color: rgb(51, 51, 51);
 	font: 400 1.50em/1.50em 'Open Sans', sans-serif;
-}
-
-.banner {
-    background-color: rgb(255,79,79);
-    padding: 40px;
-    margin-bottom: 5px;
-
-}
-.intro-img {
-    width: 100%;  
-
-}
-.container {
-    max-width: 960px;
-    padding-left: 30px;
-    padding-right: 30px;
-   
-}
-
-.text-container {
-
-    margin-bottom: 10px;   
+    position: relative;
 }
 
 h1 {
     font-size: 2em;
     font-weight: 300;
 }
-.info-section {
-    margin-top: 20px;
+
+h2 {
+    font-size: 1.75em;
+    font-family: 'Aldrich', sans-serif;   
 }
 h4 {
     font-size: 1.25em;
     border-bottom: 1px solid rgb(235,235,235);
     font-weight: 300;
 }
-ol {
+ol, ul {
     list-style-type: none;
     padding-left: 0;
 }
 
-.title-container {
-     background-color: rgb(255,79,79);
-    margin-top: 10px;
+/*===================CONTAINER============================*/
+.container-fluid {
+    padding: 0;
+    min-height: 100%;
+    position: relative;
+    max-width: 960px;
+}
+.padding-small-container {
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
-h2 {
-    font-size: 1.75em;
-    font-family: 'Aldrich', sans-serif;
-   
+.title-container {
+    background-color: rgb(255,79,79);
+    margin-top: 40px;
+    color: #fff;
+    padding: 10px;
 }
 
 .triangle {
@@ -81,7 +71,101 @@ h2 {
     border-right: 15px solid transparent;
 }
 
+.row {
+    padding-top:10px;
+    margin-left: 0;
+    margin-right: 0;
+}
 
+.store-art {
+    margin-top: 20px;
+    margin-bottom: -40px;
+    height: 80px;
+   
+    background-size: cover;
+    background-position: center;
+    background-image: url(images/n64.png);
+    background-repeat: no-repeat;  
+}
+
+
+/*===================BANNER============================*/
+.banner {
+    background-color: rgb(255,79,79);
+    margin-bottom: 8px;
+    padding: 40px;
+    max-height: 400px;
+}
+
+.logo {
+    max-height: 300px;
+}
+
+/*===================WELCOME============================*/
+
+.intro-img-con { 
+    height:180px;
+    background-size: cover;
+    background-position: center;
+    background-image: url(images/intro-xs.png);
+    background-repeat: no-repeat;
+}
+/*==================SLIDES===============================*/
+.slides {
+    position: relative;
+    height: 280px;
+    margin: 0px;
+    list-style-type: none;
+}
+
+.slide-item {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    z-index: 1;
+    background: #333;
+    color: #fff;
+    overflow: hidden;
+    vertical-align: middle; 
+
+    -webkit-transition: opacity 1s;
+    -moz-transition: opacity 1s;
+    -o-transition: opacity 1s;
+    transition: opacity 1s;
+}
+
+.showing {
+    opacity: 1;
+    z-index: 2;
+}
+
+
+
+.img-item {
+   position: absolute;    
+}
+
+
+
+
+
+
+/*===================INFO============================*/
+
+.phone {
+    margin-top: -8px;
+}
+
+
+.col-no-padright {
+    padding-right: 0;
+}
+
+
+/*===================BRANDS============================*/
 .brand-img {
     height: 100px;
     padding: 10px;
@@ -90,21 +174,24 @@ h2 {
 }
 
 .featured-img-container {
-    margin-top: 5px;
-    margin-bottom: 10px;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 .featured-img {
     border-radius: 10px;
 }
 
+/*===================SOCIAL============================*/
+
 .btn {
     color: #fff;
 }
+
 .social-item {
     padding: 20px 10px;
     background-color: rgb(0,154,202);
-    margin-top: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
+    position: relative;
 }
 
 footer {
@@ -113,5 +200,52 @@ footer {
     padding-top:20px;
     padding-bottom: 20px;
     color: #fff;
-    margin-top:20px;
+    margin-top:40px;
+    right: 0;
+    bottom: 10;
+    left: 0;
+    position: absolute;
 }
+
+
+
+
+.brands {
+    margin-top: 30px;
+    margin-bottom: 100px;
+}
+
+/**** MEDIA SCREEN ****/
+@media screen and (min-width: 960px){
+
+    .intro-img-con {
+        height:240px;
+    }
+
+    .padding-small-container{
+        padding-left: 0;
+        padding-right: 0;
+    }
+    
+    .col-no-padleft {
+    padding-left: 0;    
+}
+}
+
+@media screen and (max-width: 320px){
+h1 {
+    font-size: 1.69em;
+}
+    
+.time {
+    padding-right: 0;
+}
+
+.days {
+    padding-left: 5px;
+    
+}
+}
+
+
+
